{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 14,
  "lineage": "fd4924d4-08b5-a502-1b2c-0a2b628da2bc",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-08a25e0b6d866b072",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-52-15-124-173.us-east-2.compute.amazonaws.com",
            "public_ip": "52.15.124.173",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "frontstep-iac-default-vpc-us-east-1a",
              "name": "frontstep-dev"
            },
            "tags_all": {
              "Name": "frontstep-iac-default-vpc-us-east-1a",
              "name": "frontstep-dev"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0a200168f36a378e9",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-18-131-3.us-east-2.compute.amazonaws.com",
            "public_ip": "3.18.131.3",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "frontstep-iac-default-vpc-us-east-1b",
              "name": "frontstep-dev"
            },
            "tags_all": {
              "Name": "frontstep-iac-default-vpc-us-east-1b",
              "name": "frontstep-dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:928293414928:internet-gateway/igw-090c4a2452375ab11",
            "id": "igw-090c4a2452375ab11",
            "owner_id": "928293414928",
            "tags": {
              "Name": "frontstep-iac-default-vpc",
              "name": "frontstep-dev"
            },
            "tags_all": {
              "Name": "frontstep-iac-default-vpc",
              "name": "frontstep-dev"
            },
            "vpc_id": "vpc-00a92e58a9e4187f0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-090c4a2452375ab11",
            "id": "r-rtb-0490bb96df90fb9011080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0490bb96df90fb901",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:928293414928:route-table/rtb-08f45f95b1655468e",
            "id": "rtb-08f45f95b1655468e",
            "owner_id": "928293414928",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "frontstep-iac-default-vpc-private-us-east-1a",
              "name": "frontstep-dev"
            },
            "tags_all": {
              "Name": "frontstep-iac-default-vpc-private-us-east-1a",
              "name": "frontstep-dev"
            },
            "vpc_id": "vpc-00a92e58a9e4187f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:928293414928:route-table/rtb-0f65aef16201380bd",
            "id": "rtb-0f65aef16201380bd",
            "owner_id": "928293414928",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "frontstep-iac-default-vpc-private-us-east-1b",
              "name": "frontstep-dev"
            },
            "tags_all": {
              "Name": "frontstep-iac-default-vpc-private-us-east-1b",
              "name": "frontstep-dev"
            },
            "vpc_id": "vpc-00a92e58a9e4187f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:928293414928:route-table/rtb-0490bb96df90fb901",
            "id": "rtb-0490bb96df90fb901",
            "owner_id": "928293414928",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "frontstep-iac-default-vpc-public",
              "name": "frontstep-dev"
            },
            "tags_all": {
              "Name": "frontstep-iac-default-vpc-public",
              "name": "frontstep-dev"
            },
            "vpc_id": "vpc-00a92e58a9e4187f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:928293414928:vpc/vpc-00a92e58a9e4187f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0030b3814dc75069c",
            "default_route_table_id": "rtb-08fc0ecc6ccb31552",
            "default_security_group_id": "sg-03d0aa1e75554d99e",
            "dhcp_options_id": "dopt-d76414bc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00a92e58a9e4187f0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08fc0ecc6ccb31552",
            "owner_id": "928293414928",
            "tags": {
              "Name": "frontstep-iac-default-vpc",
              "name": "frontstep-dev"
            },
            "tags_all": {
              "Name": "frontstep-iac-default-vpc",
              "name": "frontstep-dev"
            }
          }
        }
      ]
    }
  ]
}